RESOLVED FIXED73214
REGRESSION (r101215): Crash on launch beneath +[WebView _standardUserAgentWithApplicationName:]
https://bugs.webkit.org/show_bug.cgi?id=73214
Summary REGRESSION (r101215): Crash on launch beneath +[WebView _standardUserAgentWit...
Adam Roben (:aroben)
Reported 2011-11-28 06:32:36 PST
REGRESSION (r101215): Crash on launch beneath +[WebView _standardUserAgentWithApplicationName:]
Attachments
Patch (1.72 KB, patch)
2011-11-28 06:32 PST, Adam Roben (:aroben)
koivisto: review+
Adam Roben (:aroben)
Comment 1 2011-11-28 06:32:58 PST
Antti Koivisto
Comment 2 2011-11-28 06:37:24 PST
Comment on attachment 116748 [details] Patch r=me
Adam Roben (:aroben)
Comment 3 2011-11-28 06:38:15 PST
Note You need to log in before you can comment on or make changes to this bug.