Properly retain the OS X version string

Fixes <http://webkit.org/b/73214> REGRESSION (r101215): Crash on launch beneath +[WebView
_standardUserAgentWithApplicationName:]

Reviewed by Antti Koivisto.

* WebView/WebView.mm:
(createMacOSXVersionString): Retain the string we're returning, since this function is
supposed to return an owning reference to the caller.

Canonical link: https://commits.webkit.org/89737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101256 268f45cc-cd09-0410-ab3c-d52691b4dbfc